viewing and editing questions

--- a/src/app/master.scss
+++ b/src/app/master.scss
@@ -1,6 +1,6 @@
 $subjects: "physics", "ess", "bio", "chem", "math", "energy";
 $subject-colors: (physics: red, ess: darkblue, bio: green, chem: purple, math: orange, energy: gold);
-$subject-icons: (physics: "\f135", ess: "\f0ac", bio: "\f188", chem: "\f0c3", math: "\f1ec", energy: "\f0e7");
+$subject-icons: (physics: "\f085", ess: "\f0ac", bio: "\f21e", chem: "\f0c3", math: "\f1ec", energy: "\f0e7");
 
 input[type=radio].subject-button,
 input[type=checkbox].subject-button {
