--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,7 +1,9 @@
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-3">Blair Science Bowl</h1>
+    <h1 class="display-2">Blair Science Bowl</h1>
     <p>The Science Bowl Team at Montgomery Blair High School in Silver Spring, MD is one of the most successful and recognized Science Bowl teams in the nation.</p>
     <p><a class="btn btn-primary btn-lg" routerLink="/tryout">Tryout <i class="fa fa-arrow-right"></i></a></p>
   </div>
 </div>
+
+<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/USdH3d21Gq4?rel=0" frameborder="0" allowfullscreen></iframe>-->
