login finally works

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -6,4 +6,22 @@
   </div>
 </div>
 
-<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/USdH3d21Gq4?rel=0" frameborder="0" allowfullscreen></iframe>-->
+<div class="row">
+  <div class="col-md-4">
+    <h2>Tradition of Excellence</h2>
+    <p>Consistently winning the Maryland Regional Science Bowl almost every year since it began participating, the Blair Science Bowl Team succeeded in taking the National Science Bowl championship in 2016 and 1999. It placed second in 2011 and seventh in 2017.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Three Teams</h2>
+    <p>There are three Science Bowl teams at Blair. A Team trains its hardest to compete at the national level, consisting of seniors, juniors, and occasionally sophomores; B Team's juniors and sophomores replenish A Team's ranks as seniors graduate; C Team is reserved only for freshmen, forming the next generation of Blair Science Bowl. All three participate annually at the Maryland Regional Science Bowl.</p>
+  </div>
+  <div class="col-md-4">
+    <h2>Academic Rigor</h2>
+    <p>Blair Science Bowlers, as they're known colloquially, study hard throughout the year to participate for the Regional and National competitions, exploring the depths of the six subjects of Science Bowl: chemistry, biology, mathematics, physics, earth and space science, and energy.</p>
+  </div>
+</div>
+
+<br/><br/>
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/USdH3d21Gq4" allowfullscreen></iframe>
+</div>
