--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,23 +6,21 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item"><a class="nav-link">Resources</a></li>
+    </ul>
+    <ul class="navbar-nav" *ngIf="status.user">
+      <li class="nav-item text-muted">
+        <span class="navbar-text"><i class="fa fa-user"></i> {{ status.user.name.first }} {{ status.user.name.last }}</span>
       </li>
 
-      <li class="nav-item"></li>
+      <li class="nav-item"><a class="nav-link" (click)="logout()" href="javascript:void(0)">Logout</a></li>
     </ul>
-    <ul class="navbar-nav">
-      <li class="nav-item text-muted" *ngIf="status.user">
-        <i class="fa fa-user"></i> {{ status.user.name.first }} {{ status.user.name.last }}
-      </li>
+    <ul class="navbar-nav" *ngIf="!status.user">
+      <li class="nav-item"><a class="nav-link" routerLink="/user/login">Login</a></li>
     </ul>
   </div>
 </nav>
 
-<div class="container" id="content">
+<div id="content" class="container">
   <router-outlet></router-outlet>
 </div>
