--- a/src/app/tryout/tryout.component.html
+++ b/src/app/tryout/tryout.component.html
@@ -1,44 +1,46 @@
-<h1>Science Bowl Tryouts</h1>
+<div class="container">
+  <h1>Science Bowl Tryouts</h1>
 
-<ng-container *ngIf="!started">
-  <p>Welcome to the online tryouts for the Montgomery Blair High School Science Bowl Team! The following questions are designed to test your knowledge of the six Science Bowl subjects: physics, mathematics, chemistry, biology, earth and space science, and energy. All questions are multiple choice and have strict time limits ranging from 10 to 45 seconds. There are 50 questions, and overall, we estimate that the test will require less than half an hour.</p>
+  <ng-container *ngIf="!started">
+    <p>Welcome to the online tryouts for the Montgomery Blair High School Science Bowl Team! The following questions are designed to test your knowledge of the six Science Bowl subjects: physics, mathematics, chemistry, biology, earth and space science, and energy. All questions are multiple choice and have strict time limits ranging from 10 to 45 seconds. There are 50 questions, and overall, we estimate that the test will require less than half an hour.</p>
 
-  <h3>Scoring</h3>
+    <h3>Scoring</h3>
 
-  <p>One (1) point will be awarded for all correct answers. Zero (0) points are awarded for unanswered questions (either skipped or time expired). In Science Bowl competition, reckless guessing has the potential to hurt teams by taking away scoring opportunities and possibly giving up an interrupt penalty. Therefore, in order to discourage guessing, three quarters (0.75) of a point will be subtracted for all incorrect answers.</p>
+    <p>One (1) point will be awarded for all correct answers. Zero (0) points are awarded for unanswered questions (either skipped or time expired). In Science Bowl competition, reckless guessing has the potential to hurt teams by taking away scoring opportunities and possibly giving up an interrupt penalty. Therefore, in order to discourage guessing, three quarters (0.75) of a point will be subtracted for all incorrect answers.</p>
 
-  <h3>Integrity</h3>
+    <h3>Integrity</h3>
 
-  <p>The captains have worked tirelessly to produce this tryout and these questions. During the tryout, you can only consult your own knowledge of the subjects! Any violation of the integrity of this tryout will be reported to appropriate school authorities. Violations include, but are not limited to, consulting any reference source (including textbooks or notes), searching the Internet, or using a calculator. Additionally, no discussion of the contents of the tryout are permitted with anyone else (besides a captain) until the tryout window ends.</p>
+    <p>The captains have worked tirelessly to produce this tryout and these questions. During the tryout, you can only consult your own knowledge of the subjects! Any violation of the integrity of this tryout will be reported to appropriate school authorities. Violations include, but are not limited to, consulting any reference source (including textbooks or notes), searching the Internet, or using a calculator. Additionally, no discussion of the contents of the tryout are permitted with anyone else (besides a captain) until the tryout window ends.</p>
 
-  <label class="custom-control custom-checkbox">
-    <input type="checkbox" class="custom-control-input" [(ngModel)]="agreed">
-    <span class="custom-control-indicator"></span>
-    <span class="custom-control-description">I agree to respect the integrity of this tryout by not using any outside reference sources and by not discussing the content of this tryout with anyone else until the tryout window ends.</span>
-  </label>
-
-  <p>Time begins when you press the start button. If you have any questions before, during, or after the tryout, <a href="mailto:mbhs.sciencebowl@gmail.com">email us</a>. Good luck, have fun, and thanks for trying out!</p>
-
-  <button type="button" class="btn btn-primary btn-block" [disabled]="!agreed" (click)="nextQuestion()">Start! <i class="fa fa-clock-o"></i></button>
-</ng-container>
-
-<ng-container *ngIf="started">
-  <div class="clearfix">
-    <h3 class="float-sm-left">Question {{ question.number }}</h3>
-    <button type="button" class="btn btn-primary float-sm-right" (click)="nextQuestion()" *ngIf="stopped">Next question <i class="fa fa-arrow-right"></i></button>
-    <button type="button" class="btn btn-info float-sm-right" (click)="stopped = true" *ngIf="!stopped">Skip <i class="fa fa-times"></i></button>
-  </div>
-
-  <p>{{ question.text }}</p>
-
-  <div class="custom-controls-stacked">
-    <label class="custom-control custom-radio" *ngFor="let choice of CHOICES;">
-      <input type="radio" class="custom-control-input" [(ngModel)]="answerChoice" [value]="choice" [disabled]="stopped">
+    <label class="custom-control custom-checkbox">
+      <input type="checkbox" class="custom-control-input" [(ngModel)]="agreed">
       <span class="custom-control-indicator"></span>
-      <span class="custom-control-description">{{ choice }}) {{ question.choices[choice] }}</span>
+      <span class="custom-control-description">I agree to respect the integrity of this tryout by not using any outside reference sources and by not discussing the content of this tryout with anyone else until the tryout window ends.</span>
     </label>
-  </div>
 
-  <br/><br/>
-  <button type="button" class="btn btn-success" (click)="stopped = true" [disabled]="stopped || !answerChoice">Submit <i class="fa fa-check"></i></button>
-</ng-container>
+    <p>Time begins when you press the start button. If you have any questions before, during, or after the tryout, <a href="mailto:mbhs.sciencebowl@gmail.com">email us</a>. Good luck, have fun, and thanks for trying out!</p>
+
+    <button type="button" class="btn btn-primary btn-block" [disabled]="!agreed" (click)="nextQuestion()">Start! <i class="fa fa-clock-o"></i></button>
+  </ng-container>
+
+  <ng-container *ngIf="started">
+    <div class="clearfix">
+      <h3 class="float-sm-left">Question {{ question.number }}</h3>
+      <button type="button" class="btn btn-primary float-sm-right" (click)="nextQuestion()" *ngIf="stopped">Next question <i class="fa fa-arrow-right"></i></button>
+      <button type="button" class="btn btn-info float-sm-right" (click)="skip()" *ngIf="!stopped">Skip <i class="fa fa-times"></i></button>
+    </div>
+
+    <p>{{ question.text }}</p>
+
+    <div class="custom-controls-stacked">
+      <label class="custom-control custom-radio" *ngFor="let choice of CHOICES;">
+        <input type="radio" class="custom-control-input" [(ngModel)]="answerChoice" [value]="choice" [disabled]="stopped">
+        <span class="custom-control-indicator"></span>
+        <span class="custom-control-description">{{ choice }}) {{ question.choices[choice] }}</span>
+      </label>
+    </div>
+
+    <br/><br/>
+    <button type="button" class="btn btn-success" (click)="submit()" [disabled]="stopped || !answerChoice">Submit <i class="fa fa-check"></i></button>
+  </ng-container>
+</div>
