--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,7 @@
       <li class="nav-item"><a class="nav-link" (click)="logout()" href="javascript:void(0)">Logout</a></li>
     </ul>
     <ul class="navbar-nav" *ngIf="!status.user">
+      <li class="nav-item"><a class="nav-link" routerLink="/user/register">Register</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/user/login">Login</a></li>
     </ul>
   </div>
