--- a/src/app/master.scss
+++ b/src/app/master.scss
@@ -1,5 +1,5 @@
 $subjects: "physics", "ess", "bio", "chem", "math", "energy";
-$subject-colors: (physics: red, ess: darkblue, bio: green, chem: purple, math: orange, energy: gold);
+$subject-colors: (physics: red, ess: darkblue, bio: seagreen, chem: purple, math: hotpink, energy: gold);
 $subject-icons: (physics: "\f085", ess: "\f0ac", bio: "\f21e", chem: "\f0c3", math: "\f1ec", energy: "\f0e7");
 
 input[type=radio].subject-button,
