--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a class="nav-link">Resources</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/resources">Resources</a></li>
     </ul>
     <ul class="navbar-nav" *ngIf="status.user">
       <li class="nav-item text-muted">
