ready to rewrite the routes

--- a/src/app/question/question.view.component.html
+++ b/src/app/question/question.view.component.html
@@ -1,6 +1,6 @@
 <div class="clearfix">
   <h1 class="float-sm-left">Question</h1>
-  <button type="button" class="btn btn-success float-sm-right" *ngIf="!editing" (click)="editing = true;">Edit <i class="fa fa-pencil"></i></button>
+  <button type="button" class="btn btn-success float-sm-right" *ngIf="!editing" (click)="editing = true;">Edit <i class="fas fa-pencil"></i></button>
 </div>
 <br/>
 
