--- a/src/app/user/user.profile.component.html
+++ b/src/app/user/user.profile.component.html
@@ -6,6 +6,6 @@
   <div class="card-body">
     <h4 class="card-title">Aye, Aye, Captain!</h4>
     <p class="card-text">It looks like you're a Science Bowl captain! Hop on over to the Control Panel to manage the team.</p>
-    <a class="btn btn-primary btn-block" routerLink="/admin">Captain's Control Panel <i class="fa fa-trophy"></i></a>
+    <a class="btn btn-primary btn-block" routerLink="/admin">Captain's Control Panel <i class="fas fa-trophy"></i></a>
   </div>
 </div>
