--- a/src/app/admin/control.panel.component.html
+++ b/src/app/admin/control.panel.component.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-sm-6">
     <h3>Tryouts</h3>
-    <a class="btn btn-info btn-block" routerLink="/admin/tryouts">See Tryout Results <i class="fa fa-eye"></i></a>
+    <a class="btn btn-info btn-block" routerLink="/admin/tryouts">See Tryout Results <i class="fas fa-eye"></i></a>
   </div>
   <div class="col-sm-6">
     <h3>Questions</h3>
