--- a/src/app/admin/tryout.results.component.html
+++ b/src/app/admin/tryout.results.component.html
@@ -3,7 +3,7 @@
 <p>Results are displayed as <code>(score)</code> / <code>(# answered)</code>.</p>
 
 <ng-container *ngIf="!tryouts">
-  <p>Loading tryout results! <i class="fa fa-spinner fa-spin fa-2x"></i></p>
+  <p>Loading tryout results! <i class="fas fa-spinner fa-spin fa-2x"></i></p>
 </ng-container>
 
 <ng-container *ngFor="let tryout of tryouts;">
