--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
     <ul class="navbar-nav" *ngIf="status.user">
       <li class="nav-item text-muted">
         <a class="nav-link" routerLink="/user/profile">
-          <i class="fa fa-user" *ngIf="status.user.role == config.ROLES.user"></i>
-          <i class="fa fa-trophy" *ngIf="status.user.role == config.ROLES.captain"></i>
+          <i class="fass fa-user" *ngIf="status.user.role == config.ROLES.user"></i>
+          <i class="fas fa-trophy" *ngIf="status.user.role == config.ROLES.captain"></i>
           {{ status.user.name.first }} {{ status.user.name.last }}
         </a>
       </li>
