--- a/src/app/content/index.component.html
+++ b/src/app/content/index.component.html
@@ -15,10 +15,10 @@
 
     <p class="card-text">
       <ng-container *ngIf="!status.user">
-        <a class="btn btn-primary" routerLink="/user/register">Register <i class="fa fa-user-plus"></i></a>
-        <a class="btn btn-primary" routerLink="/user/login">Login <i class="fa fa-user"></i></a>
+        <a class="btn btn-primary mr-2" routerLink="/user/register">Register <i class="fas fa-user-plus"></i></a>
+        <a class="btn btn-primary" routerLink="/user/login">Login <i class="fas fa-user"></i></a>
       </ng-container>
-      <a *ngIf="status.user" class="btn btn-primary" routerLink="/tryout">Tryout! <i class="fa fa-arrow-right"></i></a>
+      <a *ngIf="status.user" class="btn btn-primary" routerLink="/tryout">Tryout! <i class="fas fa-arrow-right"></i></a>
     </p>
   </div>
 </div>
