--- a/src/app/user/user.register.component.html
+++ b/src/app/user/user.register.component.html
@@ -47,24 +47,20 @@
     <label class="col-sm-2"><strong>Year</strong></label>
     <div class="col-sm-10">
       <label class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" formControlName="year" value="9">
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Freshman (9)</span>
+        <input type="radio" class="custom-control-input" formControlName="year" value="9" id="freshmanRadio">
+        <label class="custom-control-label" for="freshmanRadio">Freshman (9)</label>
       </label>
       <label class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" formControlName="year" value="10">
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Sophomore (10)</span>
+        <input type="radio" class="custom-control-input" formControlName="year" value="10" id="sophomoreRadio">
+        <label class="custom-control-label" for="sophomoreRadio">Sophomore (10)</label>
       </label>
       <label class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" formControlName="year" value="11">
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Junior (11)</span>
+        <input type="radio" class="custom-control-input" formControlName="year" value="11" id="juniorRadio">
+        <label class="custom-control-label" for="juniorRadio">Junior (11)</label>
       </label>
       <label class="custom-control custom-radio">
-        <input type="radio" class="custom-control-input" formControlName="year" value="12">
-        <span class="custom-control-indicator"></span>
-        <span class="custom-control-description">Senior (12)</span>
+        <input type="radio" class="custom-control-input" formControlName="year" value="12" id="seniorRadio">
+        <label class="custom-control-label" for="seniorRadio">Senior (12)</label>
       </label>
     </div>
   </div>
